; ModuleID = '/home/carl/AnghaBench/rufus/src/bled/extr_crc32.c_crc32_filltable.c'
source_filename = "/home/carl/AnghaBench/rufus/src/bled/extr_crc32.c_crc32_filltable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRC_LE_BITS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @crc32_filltable(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %14, label %7

7:                                                ; preds = %2
  %8 = load i32, i32* @CRC_LE_BITS, align 4
  %9 = shl i32 1, %8
  %10 = sext i32 %9 to i64
  %11 = mul i64 %10, 4
  %12 = trunc i64 %11 to i32
  %13 = call i32* @malloc(i32 %12)
  store i32* %13, i32** %3, align 8
  br label %14

14:                                               ; preds = %7, %2
  %15 = load i32*, i32** %3, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %27

17:                                               ; preds = %14
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @crc32init_be(i32* %21)
  br label %26

23:                                               ; preds = %17
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @crc32init_le(i32* %24)
  br label %26

26:                                               ; preds = %23, %20
  br label %27

27:                                               ; preds = %26, %14
  %28 = load i32*, i32** %3, align 8
  ret i32* %28
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @crc32init_be(i32*) #1

declare dso_local i32 @crc32init_le(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
